--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ memmem = "0.1.1"
 quoted_printable = "0.5.1"
 regex = "1.11.0"
 scraper = "0.20.0"
+image = "0.25.6"
+htmlize = { version = "1.0.6", features = ["unescape"] }
+unicode-truncate = "2.0.0"
