--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 base64 = "0.22.1"
 clap = { version = "4.0", features = ["derive"] }
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 lol_html = "=2.0.0"
 memmem = "0.1.1"
 quoted_printable = "0.5.1"
@@ -17,3 +17,6 @@ scraper = "0.20.0"
 image = "0.25.6"
 htmlize = { version = "1.0.6", features = ["unescape"] }
 unicode-truncate = "2.0.0"
+serde = "1.0.219"
+serde_json = "1.0.142"
+serde_derive = "1.0.219"
