--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ unicode-truncate = "2.0.0"
 serde = "1.0.219"
 serde_json = "1.0.142"
 serde_derive = "1.0.219"
+threadpool = "1.8.1"
+flume = "0.11.1"
